# quinze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  premake4.lua
include/: display.hpp  quinze.hpp  settings.hpp  state.hpp
source/: display.cpp  quinze.cpp  settings.cpp  state.cpp
